--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (0.5) dapper; urgency=low
+
+  * New usplash by Jozsef Mak 
+
+ -- Jani Monoses <jani@ubuntu.com>  Mon, 24 Apr 2006 00:09:38 +0300
+
 xubuntu-artwork (0.4) dapper; urgency=low
 
   * New 640x400 usplash image obtained by resizing the 640x480 one
