--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (0.7) dapper; urgency=low
+
+  * New usplash more in line with Ubuntu's from Michiel Sikma 
+
+ -- Jani Monoses <jani@ubuntu.com>  Tue, 23 May 2006 12:46:56 +0300
+
 xubuntu-artwork (0.6) dapper; urgency=low
 
   * Fix color palette in usplash image to not use red text (Daniele Favara) 
