New usplash from Jozsef Mak

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (0.12) feisty; urgency=low
+
+  * New usplash from Jozsef Mak
+
+ -- Gauvain Pocentek <gauvainpocentek@ubuntu.com>  Tue,  6 Mar 2007 17:53:56 +0100
+
 xubuntu-artwork (0.11) edgy; urgency=low
 
   * New usplash artwork from Jozsef Mak 
