--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+xubuntu-artwork (0.21) jaunty; urgency=low
+
+  * Update for new usplash which supports explicit theme sizes and pixmap
+    positions; see LP #64147 for details.
+  * debian/control: Bump usplash dependencies to >= 0.5.30 (THEME_VERSION==4).
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 04 Mar 2009 21:50:20 +0100
+
+xubuntu-artwork (0.20) intrepid; urgency=low
+
+  * debian/control:
+    - xubuntu-artwork-usplash now provides usplash-theme.
+    - Bump standards version to 3.8.0.
+
+ -- Cody A.W. Somerville <cody.somerville@canonical.com>  Wed, 10 Sep 2008 19:07:21 -0300
+
 xubuntu-artwork (0.19) gutsy; urgency=low
 
   * One line change;  for 640x480 non-vga theme mode,
