--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,10 @@ xubuntu-artwork (0.22) UNRELEASED; urgency=low
     - xubuntu-artwork conflicts/replaces xubuntu-default-settings (<= 0.51)
     - xubuntu-artwork provides gdm-theme.
   * usr/share/gdm/themes/xubuntu: new GDM theme by Pasi "knome" Lallinaho.
+  * usr/share/xfce4/backdrops/xubuntu-jaunty{,-ws}.png: new wallpapers by
+    Pasi "knome" Lallinaho as well.
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Mon, 16 Mar 2009 19:42:20 +0100
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Mon, 16 Mar 2009 19:44:56 +0100
 
 xubuntu-artwork (0.21) jaunty; urgency=low
 
