--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-xubuntu-artwork (0.23) UNRELEASED; urgency=low
+xubuntu-artwork (0.23) jaunty; urgency=low
 
   * usplash-theme-xubuntu.c, t_animate_step_16: Use the correct image's
     width for calculating the number of pulsating steps. Previously, this
     triggered integer, and thus buffer overflows, which caused screen
     corruption and sometimes complete corruption of the VTs. (LP: #345269)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 19 Mar 2009 22:39:09 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 19 Mar 2009 22:42:34 +0100
 
 xubuntu-artwork (0.22) jaunty; urgency=low
 
