--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (0.23) UNRELEASED; urgency=low
+
+  * usr/share/gdm: updated gdm theme to 0.6 (includes an icon for xdmcp,
+    LP: #71412).
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 19 Mar 2009 22:54:23 +0100
+
 xubuntu-artwork (0.22) jaunty; urgency=low
 
   * debian/control:
