--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ xubuntu-artwork (0.24) UNRELEASED; urgency=low
 
   * usr/share/gdm: updated gdm theme to 0.6 (includes several bugfixes and an
     icon for xdmcp, LP: #71412).
+  * usr/share/xfce4/backdrops/xubuntu-jaunty.png: reupload with the correct
+    ratio (4/3 instead of 960/691 :).
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 21 Mar 2009 01:16:41 +0100
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 21 Mar 2009 11:14:39 +0100
 
 xubuntu-artwork (0.23) jaunty; urgency=low
 
