--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+xubuntu-artwork (0.24) jaunty; urgency=low
+
+  * usr/share/gdm: updated gdm theme to 0.6 (includes several bugfixes and an
+    icon for xdmcp, LP: #71412).
+  * usr/share/xfce4/backdrops/xubuntu-jaunty.png: reupload with the correct
+    ratio (4/3 instead of 960/691 :).
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 22 Mar 2009 23:43:05 +0100
+
 xubuntu-artwork (0.23) jaunty; urgency=low
 
   * usplash-theme-xubuntu.c, t_animate_step_16: Use the correct image's
