--- a/debian/changelog
+++ b/debian/changelog
@@ -4,9 +4,9 @@ xubuntu-artwork (0.28) UNRELEASED; urgency=low
   * debian/xubuntu-artwork.install: drop usr/share/icons.
   * debian/control:
     - bump Standards-Version to 3.8.2, no changes
-    - xubuntu-artwork now depends on gnome-brave-icon-theme.
+    - xubuntu-artwork now depends on gnome-brave-icon-theme (LP: #395269).
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Fri, 03 Jul 2009 20:08:14 +0200
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Fri, 03 Jul 2009 20:17:04 +0200
 
 xubuntu-artwork (0.27) karmic; urgency=low
 
