--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-xubuntu-artwork (0.30) UNRELEASED; urgency=low
+xubuntu-artwork (0.30) karmic; urgency=low
 
-  * Reupload with a correct tarball (no .bzr directory).
+  * Reupload with a correct tarball (no $dvcs directory).
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 01 Aug 2009 17:53:36 +0200
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 01 Aug 2009 17:55:42 +0200
 
 xubuntu-artwork (0.29) karmic; urgency=low
 
