usr/share/pixmaps/xubuntu-logo.png: refreshed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (0.32) UNRELEASED; urgency=low
+
+  * usr/share/pixmaps/xubuntu-logo.png: refreshed.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 12 Sep 2009 20:30:29 +0200
+
 xubuntu-artwork (0.31) karmic; urgency=low
 
   * debian/usplash-theme-xubuntu.postinst: increase priority, so that the
