--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (0.32) karmic; urgency=low
+
+  * usr/share/pixmaps/xubuntu-logo.png: refreshed, and add a svg version.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 13 Sep 2009 14:06:08 +0200
+
 xubuntu-artwork (0.31) karmic; urgency=low
 
   * debian/usplash-theme-xubuntu.postinst: increase priority, so that the
