--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,21 @@
 xubuntu-artwork (0.33) UNRELEASED; urgency=low
 
-  * gdm_svg, usr/share/gdm: dropped, was for gdm legacy.
+  * gdm_svg: dropped, was for gdm legacy.
   * Makefile: don't build gdm_svg.
-  * usr/share/themes/Albatross: added, new gtk theme.
+  * usr/share/themes/Albatross: added, new xubuntu gtk theme.
   * debian/copyright: refreshed.
-  * debian/control, debian/xubuntu-gdm-theme.install: dropped.
-  * debian/control: only recommends usplash-theme-xubuntu (LP: #433010).
+  * debian/control:
+    - don't build-depend on librsvg2-bin, unneeded
+    - only recommends usplash-theme-xubuntu (LP: #433010), xubuntu-gdm-theme,
+      xubuntu-wallpapers
+    - xubuntu-gdm-theme depends on feh, and recommends xfwm4 and xfce4-settings
+      and xfce4-power-manager.
+  * usr/share/gdm: drop gdm legacy theme and provide desktop files for some
+    useful apps (power manager, window manager, settings manager…).
+  * debian/xubuntu-gdm-theme.gconf-defaults: added, set logo_icon_name to
+    xubuntu-logo.
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 19 Sep 2009 13:13:38 +0200
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 19 Sep 2009 13:59:50 +0200
 
 xubuntu-artwork (0.32) karmic; urgency=low
 
