usr/share/themes/Albatross/gtk-2.0/gtkrc: add theming for the application switcher. LP: #360175

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 xubuntu-artwork (0.34) UNRELEASED; urgency=low
 
   * Merge changes with usplash-theme-ubuntu, with a new logo. LP: #360499
+  * usr/share/themes/Albatross/gtk-2.0/gtkrc: add theming for the application
+    switcher. LP: #360175
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 26 Sep 2009 14:43:18 +0200
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 26 Sep 2009 14:54:12 +0200
 
 xubuntu-artwork (0.33) karmic; urgency=low
 
