--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+xubuntu-artwork (0.35) UNRELEASED; urgency=low
+
+  [ Steve Dodier ]
+  * usr/share/themes/Albatross: add theming for icons background in xfdesktop.
+  * usr/share/icons/elementaryXubuntu: removed notification icons and fixed symlinks.
+
+  [ Lionel Le Folgoc ]
+  * debian/control: update Vcs-* fields.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 03 Oct 2009 18:37:52 +0200
+
 xubuntu-artwork (0.34) karmic; urgency=low
 
   * usr/share/icons/elementaryXubuntu: new icon theme, inspired of elementary.
