--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (0.36) UNRELEASED; urgency=low
+
+  * usr/share/themes/Albatross: fixed a problem with checkboxes becoming red.
+
+ -- Steve Dodier <sidnioulz@gmail.com>  Sat, 03 Oct 2009 23:20:46 +0200
+
 xubuntu-artwork (0.35) UNRELEASED; urgency=low
 
   [ Steve Dodier ]
