--- a/debian/changelog
+++ b/debian/changelog
@@ -1,25 +1,15 @@
-xubuntu-artwork (0.37) UNRELEASED; urgency=low
-
-  * usr/share/themes/Albatross: added the xfwm4 theme.
-
- -- Steve Dodier <sidnioulz@gmail.com>  Sat, 03 Oct 2009 23:37:11 +0200
- 
-xubuntu-artwork (0.36) UNRELEASED; urgency=low
-
-  * usr/share/themes/Albatross: fixed a problem with checkboxes becoming red.
-
- -- Steve Dodier <sidnioulz@gmail.com>  Sat, 03 Oct 2009 23:20:46 +0200
-
-xubuntu-artwork (0.35) UNRELEASED; urgency=low
+xubuntu-artwork (0.35) karmic; urgency=low
 
   [ Steve Dodier ]
-  * usr/share/themes/Albatross: add theming for icons background in xfdesktop.
+  * usr/share/themes/Albatross: 
+    - added theming for icons background in xfdesktop.
+    - added new Albatross xfwm4 theme.
   * usr/share/icons/elementaryXubuntu: removed notification icons and fixed symlinks.
 
   [ Lionel Le Folgoc ]
   * debian/control: update Vcs-Browser field.
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 03 Oct 2009 18:39:26 +0200
+ -- Cody A.W. Somerville <cody-somerville@ubuntu.com>  Sat, 03 Oct 2009 19:04:35 -0300
 
 xubuntu-artwork (0.34) karmic; urgency=low
 
