--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (0.36) UNRELEASED; urgency=low
+xubuntu-artwork (0.36) karmic; urgency=low
 
   [ Lionel Le Folgoc ]
   * usr/share/images/xsplash: add an xplash theme. LP: #442848
@@ -12,7 +12,7 @@ xubuntu-artwork (0.36) UNRELEASED; urgency=low
   * usr/share/themes/Albatross: set link-color to workaround a problem in
     firefox.
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Tue, 06 Oct 2009 10:30:09 +0200
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Tue, 06 Oct 2009 10:32:57 +0200
 
 xubuntu-artwork (0.35) karmic; urgency=low
 
