--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (0.39) UNRELEASED; urgency=low
+xubuntu-artwork (0.39) lucid; urgency=low
 
   * debian/control:
     - update Vcs-Browser field for lucid
@@ -6,10 +6,10 @@ xubuntu-artwork (0.39) UNRELEASED; urgency=low
       xubuntu-icon-theme
     - move icons to their own package, xubuntu-icon-theme. C/R previous
       revisions of xubuntu-artwork.
-  * xubuntu-icon-theme.install: added, ship usr/share/icons (dropped from
-    debian/xubuntu-artwork.install).
+  * debian/xubuntu-icon-theme.install: added, ship usr/share/icons (dropped
+    from debian/xubuntu-artwork.install).
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 12 Dec 2009 16:14:31 +0100
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 12 Dec 2009 16:26:31 +0100
 
 xubuntu-artwork (0.38) karmic; urgency=low
 
