--- a/debian/changelog
+++ b/debian/changelog
@@ -1,17 +1,17 @@
 xubuntu-artwork (0.40) UNRELEASED; urgency=low
 
-  * Switch from our ugly hack(tm)(r)(c) to gnome-settings-daemon for gdm:
+  * Test: switch from our ugly hack(tm)(r)(c) to gnome-settings-daemon for gdm:
     - usr/share/gdm/autostart/LoginWindow/:
       + xubuntu-gdm-{background-picture,settings-manager}.desktop: dropped
     - debian/control: xubuntu-gdm-theme binary package:
       + drop dependency on feh & recommendation on xfce4-settings
       + recommends gnome-settings-daemon
       + demotes xfce4-power-manager to Suggests
-    - debian/xubuntu-gdm-theme.gconf-defaults: set icon & gtk themes, reenable
-      buttons.
+    - debian/xubuntu-gdm-theme.gconf-defaults: set icon & gtk themes, re-enable
+      icons.
   * debian/control: drop spurious conflicts breaking the iso build.
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Tue, 15 Dec 2009 12:05:07 +0100
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Tue, 15 Dec 2009 12:11:06 +0100
 
 xubuntu-artwork (0.39) lucid; urgency=low
 
